# ml-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: Dockerfile  README.md  pyproject.toml
{{cookiecutter.project_name}}/mlflow-config/: Dockerfile  run.sh
{{cookiecutter.project_name}}/src/: inference.py  train.py
