[tool.poetry]
name = "ml-template"
version = "0.1.0"
description = ""
authors = ["Your name here"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
